--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -36,6 +36,7 @@
 <link rel="import" href="./shell/redux-store.html">
 <link rel="import" href="./components/meal-order-vendor-list.html">
 <link rel="import" href="./components/admin-vendor-menus.html">
+<link rel="import" href="./components/monthly-spendings.html">
 
 <dom-module id="meal-order-admin-app">
     <template>
@@ -177,8 +178,8 @@
                         role="main">
                     <meal-order-vendor-list data-page="vendor"></meal-order-vendor-list>
                     <admin-vendor-menus data-page="menu"></admin-vendor-menus>
-                    <!--<monthly-spending data-page="costs"></monthly-spending>
-                    <vendor-orders data-page="order"></vendor-orders>-->
+                    <monthly-spendings data-page="costs"></monthly-spendings>
+                    <!--<vendor-orders data-page="order"></vendor-orders>-->
                 </iron-pages>
             </app-header-layout>
         </app-drawer-layout>
@@ -220,6 +221,9 @@
                         }
                         case "menu": {
                             return "Меню";
+                        }
+                        case "costs": {
+                            return "Расходы за месяц";
                         }
                         default: {
                             return "";
