--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -27,6 +27,7 @@
         CLOSE_MENU: 'CLOSE_MENU',
         ADD_MENU: 'ADD_MENU',
         GET_ACTIVE_MENU: 'GET_ACTIVE_MENU',
-        GET_ALL_MENU: 'GET_ALL_MENU'
+        GET_ALL_MENU: 'GET_ALL_MENU',
+        GET_SELECTED_MONTHLY_SPENDINGS: 'GET_SELECTED_MONTHLY_SPENDINGS',
     }
 </script>
