--- a/client/admin/src/mealorder/dialog/admin-menu-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-menu-dialog.html
@@ -23,6 +23,7 @@
 <link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../../bower_components/neon-animation/web-animations.html">
 <link rel="import" href="../../../bower_components/iron-form/iron-form.html">
+<link rel="import" href="../shell/redux-store.html">
 
 <dom-module id="admin-menu-dialog">
     <template>
