Delete unused Ids

--- a/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
+++ b/client/admin/src/mealorder/dialog/admin-vendor-dialog.html
@@ -200,7 +200,7 @@
                                 </paper-button>
                             </template>
                             <template is="dom-if" if="[[_isUpdate()]]">
-                                <paper-button id="ds" class="confirm" on-click="_updateVendor">
+                                <paper-button class="confirm" on-click="_updateVendor">
                                     Обновить
                                 </paper-button>
                             </template>
