--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -37,6 +37,7 @@
 <link rel="import" href="./components/meal-order-vendor-list.html">
 <link rel="import" href="./components/admin-vendor-menus.html">
 <link rel="import" href="./components/monthly-spendings.html">
+<link rel="import" href="./components/vendor-orders.html">
 
 <dom-module id="meal-order-admin-app">
     <template>
@@ -178,6 +179,7 @@
                         role="main">
                     <meal-order-vendor-list data-page="vendor"></meal-order-vendor-list>
                     <admin-vendor-menus data-page="menu"></admin-vendor-menus>
+                    <vendor-orders data-page="order"></vendor-orders>
                     <monthly-spendings data-page="costs"></monthly-spendings>
                 </iron-pages>
             </app-header-layout>
