--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -29,5 +29,6 @@
         GET_ACTIVE_MENU: 'GET_ACTIVE_MENU',
         GET_ALL_MENU: 'GET_ALL_MENU',
         GET_SELECTED_MONTHLY_SPENDINGS: 'GET_SELECTED_MONTHLY_SPENDINGS',
+        GET_SELECTED_ORDERS: 'GET_SELECTED_ORDERS'
     }
 </script>
