--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -176,6 +176,31 @@
             }
         ];
 
+        const allPurchaseOrders = [
+            {
+                id: 'Pure',
+                title: 'Пюре',
+                date: new Date("2018-05-03"),
+                status: 'correct'
+            }, {
+                id: 'Pozitiv',
+                title: 'Позитив',
+                date: new Date("2018-05-03"),
+                status: 'incorrect'
+            },
+            {
+                id: 'Pure',
+                title: 'Пюре',
+                date: new Date("2018-05-02"),
+                status: 'correct'
+            }, {
+                id: 'Pozitiv',
+                title: 'Позитив',
+                date: new Date("2018-05-02"),
+                status: 'correct'
+            }
+        ];
+
         MealOrderAdminApp.initialState = {
             monthlySpendingsStartDate: new Date("2016-05-03"),
             serverTime: new Date("2018-05-03"),
@@ -194,67 +219,76 @@
             ],
             currentMenu: activeMenu,
             monthlySpendings: {},
+            purchaseOrders: [],
         };
 
-            MealOrderAdminApp.reducer = (state, action) => {
-                if (!state) {
-                    return MealOrderAdminApp.initialState;
-                }
-                switch (action.type) {
-                    case MealOrderAdminApp.AdminActions.OPEN_VENDOR_DIALOG: {
-                        return Object.assign({}, state, {
-                                currentDialog: action.properties
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.CLOSE_VENDOR_DIALOG: {
-                        return Object.assign({}, state, {
-                                currentDialog: {}
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.OPEN_MENU: {
-                        return Object.assign({}, state, {
-                                currentDialog: action.properties
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.CLOSE_MENU: {
-                        return Object.assign({}, state, {
-                                currentDialog: {}
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.ADD_VENDOR: {
-                        return state;
-                    }
-                    case MealOrderAdminApp.AdminActions.REMOVE_VENDOR: {
-                        return state;
-                    }
-                    case MealOrderAdminApp.AdminActions.GET_ACTIVE_MENU: {
-                        return Object.assign({}, state, {
-                                currentMenu: activeMenu
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.GET_ALL_MENU: {
-                        return Object.assign({}, state, {
-                                currentMenu: allMenu
-                            }
-                        );
-                    }
-                    case MealOrderAdminApp.AdminActions.GET_SELECTED_MONTHLY_SPENDINGS: {
-                        const selectedMonthlySpendings = monthlySpendings.find(spending =>
-                            (spending.date.getMonth() === action.date.getMonth()) &&
-                            (spending.date.getFullYear() === action.date.getFullYear()));
-                        return Object.assign({}, state, {
-                            monthlySpendings: selectedMonthlySpendings
-                            }
-                        );
-                    }
-                    default :
-                        return state;
-                }
+        MealOrderAdminApp.reducer = (state, action) => {
+            if (!state) {
+                return MealOrderAdminApp.initialState;
             }
+            switch (action.type) {
+                case MealOrderAdminApp.AdminActions.OPEN_VENDOR_DIALOG: {
+                    return Object.assign({}, state, {
+                            currentDialog: action.properties
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.CLOSE_VENDOR_DIALOG: {
+                    return Object.assign({}, state, {
+                            currentDialog: {}
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.OPEN_MENU: {
+                    return Object.assign({}, state, {
+                            currentDialog: action.properties
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.CLOSE_MENU: {
+                    return Object.assign({}, state, {
+                            currentDialog: {}
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.ADD_VENDOR: {
+                    return state;
+                }
+                case MealOrderAdminApp.AdminActions.REMOVE_VENDOR: {
+                    return state;
+                }
+                case MealOrderAdminApp.AdminActions.GET_ACTIVE_MENU: {
+                    return Object.assign({}, state, {
+                            currentMenu: activeMenu
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.GET_ALL_MENU: {
+                    return Object.assign({}, state, {
+                            currentMenu: allMenu
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.GET_SELECTED_MONTHLY_SPENDINGS: {
+                    const selectedMonthlySpendings = monthlySpendings.find(spending =>
+                        (spending.date.getMonth() === action.date.getMonth()) &&
+                        (spending.date.getFullYear() === action.date.getFullYear()));
+                    return Object.assign({}, state, {
+                            monthlySpendings: selectedMonthlySpendings
+                        }
+                    );
+                }
+                case MealOrderAdminApp.AdminActions.GET_SELECTED_ORDERS: {
+                    const currentOrders = allPurchaseOrders.filter(order => order.date.getTime()  === action.date.getTime());
+                    console.log(currentOrders);
+                    return Object.assign({}, state, {
+                            purchaseOrders: currentOrders
+                        }
+                    );
+                }
+                default :
+                    return state;
+            }
+        }
     }
 </script>
