Add CSS for the `purchase-order` component

--- a/client/admin/src/mealorder/meal-order-admin-app.html
+++ b/client/admin/src/mealorder/meal-order-admin-app.html
@@ -232,6 +232,9 @@
                         case "costs": {
                             return "Расходы за месяц";
                         }
+                        case "order": {
+                            return "Заказ поставщику";
+                        }
                         default: {
                             return "";
                         }
