--- a/client/admin/test/mealorder/dialog/admin-vendor-dialog_test.html
+++ b/client/admin/test/mealorder/dialog/admin-vendor-dialog_test.html
@@ -55,7 +55,7 @@
             component.$.dialog.open();
         });
 
-        test('should fire events', function (done) {
+        test('should fire update event', function (done) {
             const store = sinon.mock(MealOrderAdminApp.store);
             store.expects('dispatch').withArgs({
                 type: "UPDATE_VENDOR",
@@ -70,23 +70,25 @@
                 done();
             });
         });
-        test('should fire events', function (done) {
+
+        test('should fire remove event', function (done) {
             const store = sinon.mock(MealOrderAdminApp.store);
             store.expects('dispatch').withArgs({
-                type: "UPDATE_VENDOR",
-                vendor: MealOrderAdminAppTest.vendorInfo
+                title: "newTitle",
+                type: "REMOVE_VENDOR"
             });
             store.expects('dispatch').withArgs({type: "CLOSE_VENDOR_DIALOG"});
             flush(function () {
                 component.inputData = MealOrderAdminAppTest.vendorInfo;
-                const removeButton = component.shadowRoot.querySelector('.confirm');
-                button.click();
+                const removeButton = component.shadowRoot.querySelector('.remove-button-wrapper paper-button');
+                assert.equal("Удалить", removeButton.innerHTML.trim());
+                removeButton.click();
                 store.verify();
                 done();
             });
         });
 
-        test('should render correct components', function (done) {
+        test('should render correct components', function () {
             const headers = component.shadowRoot.querySelectorAll("form > h2");
             const addHeader = headers[0];
             const updateHeader = headers[1];
@@ -94,7 +96,6 @@
             assert.equal("Детали поставщика", updateHeader.innerHTML);
             assert.isTrue(addHeader.hidden);
             assert.isFalse(updateHeader.hidden);
-            debugger;
         });
     });
 
@@ -106,7 +107,7 @@
             component.$.dialog.open();
         });
 
-        test('should fire events', function (done) {
+        test('should fire add event', function (done) {
             const store = sinon.mock(MealOrderAdminApp.store);
             store.expects('dispatch').withArgs({
                 type: "ADD_VENDOR",
